--- a/src/main/resources/templates/cadastroVoo.html
+++ b/src/main/resources/templates/cadastroVoo.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="d-flex justify-content-center align-items-center vh-100 bg-light pt-6">
-    <form id="formCadastroVoo" class="max-w-4xl mx-auto p-6 bg-gray shadow-md rounded-lg border-t border-gray-300">
+    <form th:if="${funcionarios}" id="formCadastroVoo" class="max-w-4xl mx-auto p-6 bg-gray shadow-md rounded-lg border-t border-gray-300">
         <h2 class="text-2xl font-bold text-center mb-4">Cadastro de Novo Voo</h2>
         <div class="grid grid-cols-2 gap-4">
             <div>
@@ -75,6 +75,20 @@
         </div>
 
         <button type="submit" class="m-4 w-full bg-blue-600 text-white p-3 rounded-md shadow-md hover:bg-blue-700">Criar Voo</button>  
+    </form>
+
+
+    <form th:unless="${funcionarios}" action="" method="post" class="max-w-lg mx-auto bg-white dark:bg-gray-800 p-6 rounded-lg shadow-md ">
+                <h1 class="text-xl font-bold text-gray-900 dark:text-white mb-4 text-center">Você nao possui as credenciais para acessar essa página!</h1>
+            
+                <div class="mb-4">
+                    <div class="mt-4 text-center">
+                        <a th:href="@{/}"
+                            class="text-blue-600 hover:underline dark:text-blue-400">
+                            Voltar
+                        </a>
+                    </div>
+                </div>
     </form>
 
     <script>
