--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -27,9 +27,9 @@
             </button>
             <div class="hidden w-full md:block md:w-auto" id="navbar-default">
                 <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
-                    <li th:if="${clienteNome}">
+                    <li th:if="${clienteNome != null or funcionarioNome != null}">
                         <a href="#" id="abrirModal" class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500">
-                            Olá, <span th:text="${clienteNome}"></span>!
+                            Olá, <span th:text="${clienteNome != null ? clienteNome : funcionarioNome}"></span>!
                         </a>
                     </li>
                 <li>
@@ -41,7 +41,7 @@
                 <li>
                     <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Reservas</a>
                 </li>
-                <li>
+                <li th:unless="${clienteNome != null or funcionarioNome != null}">
                     <a th:href="@{/login}" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Login</a>
                 </li>
                 </ul>
@@ -340,22 +340,22 @@
     <div class="relative w-full max-w-md mx-auto bg-white rounded-lg shadow dark:bg-gray-700">
         <!-- Cabeçalho do Modal -->
         <div class="flex items-center justify-between p-4 border-b rounded-t dark:border-gray-600">
-            <h3 class="text-xl font-semibold text-gray-900 dark:text-white">Bem-vindo, <span th:text="${clienteNome}"></span>!</h3>
+            <h3 class="text-xl font-semibold text-gray-900 dark:text-white">Bem-vindo, <span th:text="${clienteNome != null ? clienteNome : funcionarioNome}"></span>!</h3>
             <button type="button" id="fecharModal" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white">
                 ✕
             </button>
         </div>
         <!-- Corpo do Modal -->
-        <div class="p-4">
+        <div th:if="${clienteNome}"  class="p-4">
             <p class="text-gray-900 dark:text-white">Email: <span class="text-gray-700 dark:text-gray-300" th:text="${clienteEmail}"></span></p>
             
 
         </div>
-        <div class="p-4 border-t border-gray-200 rounded-b dark:border-gray-600">
+        <div th:if="${clienteNome}"  class="p-4 border-t border-gray-200 rounded-b dark:border-gray-600">
             <p class="text-gray-900 dark:text-white">Telefone: <span class="text-gray-700 dark:text-gray-300" th:text="${clienteTelefone}"></span></p>
         </div>
         <!-- Rodapé do Modal -->
-        <div class="flex items-center p-4 border-t border-gray-200 rounded-b dark:border-gray-600">
+        <div th:if="${clienteNome}"  class="flex items-center p-4 border-t border-gray-200 rounded-b dark:border-gray-600">
             <a th:href="@{/alterar-dados}" class="w-full text-white bg-blue-700 hover:bg-blue-900 font-medium rounded-lg text-sm px-5 py-2.5 text-center block text-center">
                 Alterar Dados
             </a>
