--- a/src/main/resources/static/styles/home.css
+++ b/src/main/resources/static/styles/home.css
@@ -9,12 +9,40 @@ body {
     cursor: pointer;
 }
 
+.h2-info {
+    font-size: x-large;
+    background: beige;
+    color: black;
+    padding: 10px;
+    margin: -20px -20px 20px -20px;
+    border-radius: 10px 10px 10px 10px;
+    font-weight: 800;
+}
+
+.div-info{
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+
 .container {
     display: grid;
     grid-template-columns: repeat(2, 1fr); /* 2 colunas */
     gap: 20px;
     max-width: 800px;
     margin: 50px auto;
+}
+
+#container-info-aeroporto{
+    background-color: white;
+    padding: 20px;
 }
 
 .card {
