--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -246,70 +246,37 @@
     <div id="container-info-aeroporto">
         <div id="mapa" class="div-info">
             <h2 class="h2-info">Mapa do Aeroporto</h2>
-            <img src="/img/mapa-aeroporto.jpeg" alt="Mapa do Aeroporto" />
-            <p>O aeroporto conta com três terminais (cada um com seus estacionamentos) e oito balcões de check-in. O terminal A é destinado para voos regionais e de baixo custo, o terminal B é para voos nacionais em geral e o terminal C é para voos internacionais.</p>
+            <img id="mapa-img" src="/img/mapa-aeroporto.jpeg" alt="Mapa do Aeroporto" />
+            <p class="p-info">O aeroporto conta com três terminais (cada um com seus estacionamentos) e oito balcões de check-in. O terminal A é destinado para voos regionais e de baixo custo, o terminal B é para voos nacionais em geral e o terminal C é para voos internacionais.</p>
         </div>
 
         <div id="estacionamentos" class="div-info">
             <h2 class="h2-info">Estacionamentos</h2>
-            <p> As reservas nos estacionamentos possuem um preço de R$10,00 por hora, com custo adicional de R$10,00 por cada meia hora a mais que a reservada inicialmente.</p>
-            <div id="img-estacionamento">
+            <div class="img-est-sala">
                 <img src="/img/estac-A.jpg" alt="Estacionamento do terminal A" />
                 <img src="/img/estac-B.jpg" alt="Estacionamento do terminal B" />
                 <img src="/img/estac-C.jpg" alt="Estacionamento do terminal C" />
             </div>
+            <p class="p-info"> As reservas nos estacionamentos possuem um preço de R$10,00 por hora, com custo adicional de R$10,00 por cada meia hora a mais que a reservada inicialmente.</p>
         </div>
 
         <div id="salas-vip" class="div-info">
             <h2 class="h2-info">Salas VIP</h2>
-            <p>As salas VIP são destinadas a passageiros de primeira classe e executiva, além de membros de programas de fidelidade. O acesso é gratuito e conta com serviços de alimentação, bebidas, internet e entretenimento.</p>
-            <div id="img-estacionamento">
+            <p class="p-info">As salas VIP são destinadas a passageiros de primeira classe e executiva, além de membros de programas de fidelidade. O acesso é gratuito e conta com serviços de alimentação, bebidas, internet e entretenimento.</p>
+            <div class="img-est-sala">
                 <img src="/img/vipA.jpg" alt="Sala VIP do terminal A" />
                 <img src="/img/vipB.jpeg" alt="Sala VIP do terminal B" />
-                <img src="/img/vipC.jpeg" alt="Sala VIP do terminal C" />
+                <img src="/img/vipC.jpg" alt="Sala VIP do terminal C" />
             </div>
         </div>
 
         <div id="lojas" class="div-info">
             <h2 class="h2-info">Lojas</h2>
-            <p>O aeroporto conta com diversas lojas de roupas, eletrônicos, livros, bebidas, entre outros. As lojas estão localizadas nos terminais A, B e C.</p>
-            <div id="img-lojas">
-                <img src="/img/lojasA.png" alt="Lojas do terminal A" />
-                <img src="/img/lojasB.png" alt="Lojas do terminal B" />
-                <img src="/img/lojasC.png" alt="Lojas do terminal C" />
-            </div>
-
-        <div class="container">
-            <div class="card">
-                <div class="icon">📖</div>
-                <div class="content">
-                    <h3>Mapa do Aeroporto</h3>
-                    <p>Informações importantes para o usuário do transporte aéreo.</p>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="icon">📶</div>
-                <div class="content">
-                    <h3>Salas VIP</h3>
-                    <p>Em todo o Terminal a conexão é gratuita, segura e ilimitada.</p>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="icon">✈️</div>
-                <div class="content">
-                    <h3>Estacionamento</h3>
-                    <p>Preste atenção nas regras obrigatórias para viagens internacionais.</p>
-                </div>
-            </div>
-
-            <div class="card">
-                <div class="icon">💼</div>
-                <div class="content">
-                    <h3>Lojas</h3>
-                    <p>Fique atento aos limites e regras na hora de viajar.</p>
-                </div>
+            <p class="p-info">O aeroporto conta com diversas lojas de roupas, eletrônicos, bebidas, comidas, produtos regionais e também com farmácias, posto médico, serviços de câmbio, capela, entre outros. As lojas estão localizadas nos terminais A, B e C.</p>
+            <div id="img-lojas" class="img-est-sala">
+                <img src="/img/bombom-regional.jpg" alt="Lojas 1" />
+                <img src="/img/duty-free.jpg" alt="Lojas 2" />
+                <img src="/img/starbucks.jpg" alt="Lojas 3" />
             </div>
         </div>
     </div>
@@ -346,9 +313,6 @@
                         </li>
                         <li class="mb-4">
                             <a href="#" class="hover:underline">Lojas</a>
-                        </li>
-                        <li class="mb-4">
-                            <a href="#" class="hover:underline">Companhias Aéreas</a>
                         </li>
                     </ul>
                   </div>
