consertado botao de editar voos

--- a/src/main/resources/templates/homeFunc.html
+++ b/src/main/resources/templates/homeFunc.html
@@ -247,7 +247,7 @@
 
     <script>
         function toggleDropdown(id) {
-            let dropdown = document.getElementById(`dropdown-${idVoo}`);
+            let dropdown = document.getElementById(`dropdown-${id}`);
             dropdown.classList.toggle("hidden");
         }
     
