--- a/src/main/resources/templates/alterar-dados.html
+++ b/src/main/resources/templates/alterar-dados.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/styles/style-alterar.css">
     <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/5.0.7-beta.19/jquery.inputmask.min.js"></script>
 </head>
 
 <body>
@@ -178,6 +179,13 @@
             });
         });
     </script>
+
+<script>
+    $(document).ready(function(){
+        $("#telefone").inputmask("(99) 99999-9999");
+        $("#cpf").inputmask("999.999.999-99");
+    });
+</script>
 
 
 </body>
